--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.MyButtonClass {
+  background-color: red;
+  font-size: "20px";
+  box-shadow: 10px 10px 10px black;
+}
