--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: rgb(0, 0, 0);
+  height: 1000px;
 }
 
 .App-logo {
@@ -35,4 +37,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Content {
+  display: flex;
+  gap: 10px; /* لإضافة مسافة بين العناصر */
 }
