--- a/src/AppCompotants/header.css
+++ b/src/AppCompotants/header.css
@@ -1,14 +1,10 @@
 .HeaderStyle {
     padding: 0;
     margin: 0;
-    background-color: green;
+    background-color: #61dafb;
     text-align: center;
     color: hsl(0, 0%, 100%);
     font-size: 50px;
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100px;
-    z-index: 1000; /* لضمان ظهوره فوق العناصر الأخرى */
 }
