--- a/src/AppCompotants/SideBar.css
+++ b/src/AppCompotants/SideBar.css
@@ -4,6 +4,12 @@
   box-shadow: 10px 10px 10px black;
 }
 
+.SideBarStyle > button {
+  /* (100% / 2) - المسافة بين العناصر */
+  width: calc(50% - 5px); 
+  box-sizing: border-box; /* لضمان حساب العرض بدقة مع الـ border */
+}
+
 .Active {
-    border: solid 10px green;
+  border: solid 10px green;
 }
