--- a/src/AppCompotants/Posts.css
+++ b/src/AppCompotants/Posts.css
@@ -1,6 +1,13 @@
 .PostStyle {
     border: 5px solid rgb(0, 255, 0);
     background-color: rgb(255, 0, 0);
-    height: 150px;
+    height: 100px;
     width: 300px;
+    padding: 15px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.PostTitleStyle {
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
