--- a/src/AppCompotants/SideBar.css
+++ b/src/AppCompotants/SideBar.css
@@ -6,6 +6,7 @@
   justify-items: center;
   gap: 10px; 
   width: 300px; 
+  height: max-content;
 }
 
 .SideBarStyle > button {
@@ -16,10 +17,12 @@
   font-size: 10px;
   cursor: pointer;
   width: 50%;
-  height: 50%;
+  height: 50px;
   border-radius: 50px;
 }
 
-.Active {
-  border: solid 10px green;
+.SideBarStyle > button:hover {
+  background-color: rgb(113, 5, 113); /* تغيير اللون لدرجة أغمق */
+  opacity: 0.8;             /* تقليل الشفافية قليلاً */
+  transform: scale(1.05);   /* تكبير الزر بنسبة بسيطة جداً (حركة اختيارية) */
 }
