--- a/src/AppCompotants/Posts.css
+++ b/src/AppCompotants/Posts.css
@@ -1,8 +1,32 @@
+.PostsContainerTitleStyle {
+    margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: rgb(0, 255, 140);
+    border: 5px solid rgb(0, 255, 140);
+    color:rgb(16, 6, 148);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom: 1px solid rgb(16, 6, 148);
+    justify-items: center;
+    font-size: 50px;
+}
+
+.PostsContainerStyle{
+    background-color: rgb(0, 255, 140);
+    border: 5px solid rgb(0, 255, 140);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* إنشاء عمودين متساويين */
+    justify-items: center;
+    gap: 10px; 
+}
+
 .PostStyle {
-    border: 5px solid rgb(0, 255, 0);
-    background-color: rgb(255, 0, 0);
-    height: 100px;
-    width: 300px;
+    border: 5px solid rgb(5, 124, 5);
+    background-color: rgb(0, 255, 0);
+    height: max-content;
+    width: 40vh;
     padding: 15px;
     border-radius: 8px;
     margin-bottom: 10px;
