--- a/src/AppCompotants/header.css
+++ b/src/AppCompotants/header.css
@@ -1,7 +1,9 @@
 .HeaderStyle {
     padding: 0;
     margin: 0;
-    background-color: #61dafb;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    background-color: #1e0377;
     text-align: center;
     color: hsl(0, 0%, 100%);
     font-size: 50px;
