--- a/src/AppCompotants/header.css
+++ b/src/AppCompotants/header.css
@@ -8,5 +8,16 @@
     color: hsl(0, 0%, 100%);
     font-size: 50px;
     width: 100%;
-    height: 100px;
+    height: max-content;
+}
+
+.HeaderTitle{
+    margin: 0;
+    padding: 0;
+    color: aqua;
+}
+
+.HeaderContent{
+    margin: 0;
+    padding: 0;
 }
