--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,11 @@
 .App {
+  margin: 0;
+  padding: 0;
   text-align: center;
+  background-color: rgb(16, 6, 148);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -35,4 +29,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Content {
+  display: flex;
+  flex-wrap: wrap; 
+  gap: 10px; /* لإضافة مسافة بين العناصر */
+  justify-content: center;
 }
