--- a/src/AppCombonents/PostTitle.css
+++ b/src/AppCombonents/PostTitle.css
@@ -1,3 +1,7 @@
 .PostTitleStyle {
+    margin: 0;
+    padding: 0;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
     border-bottom: 1px solid rgb(0, 0, 0);
 }
