--- a/src/AppCombonents/SideBar.css
+++ b/src/AppCombonents/SideBar.css
@@ -20,6 +20,10 @@
   grid-template-columns: repeat(2, 1fr); /* إنشاء عمودين متساويين */
   justify-items: center;
   gap: 10px; 
-  width: 300px; 
+  width: max-content;
   height: max-content;
+}
+
+.SecondButtonStyle{
+  width: 25vh;
 }
