--- a/src/AppCombonents/Button.css
+++ b/src/AppCombonents/Button.css
@@ -2,6 +2,7 @@
   background-color: rgb(32, 37, 175);
   color: white;
   border: none;
+  margin: 10px;
   padding: 10px;
   font-size: 10px;
   cursor: pointer;
